[gd_scene load_steps=2 format=3 uid="uid://c8ngbl0oc0iyy"]

[ext_resource type="Script" path="res://scripts/spawn_tools.gd" id="1_spawn_tools"]

[node name="SpawnTools" type="VBoxContainer"]
script = ExtResource("1_spawn_tools")
theme_override_constants/separation = 8

[node name="ItemSpawnSection" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ItemLabel" type="Label" parent="ItemSpawnSection"]
layout_mode = 2
text = "Spawn Item"

[node name="ItemDropdown" type="OptionButton" parent="ItemSpawnSection"]
layout_mode = 2

[node name="SpawnItemButton" type="Button" parent="ItemSpawnSection"]
layout_mode = 2
text = "Select & Place Item"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="StationSpawnSection" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="StationLabel" type="Label" parent="StationSpawnSection"]
layout_mode = 2
text = "Spawn Station"

[node name="StationDropdown" type="OptionButton" parent="StationSpawnSection"]
layout_mode = 2

[node name="SpawnStationButton" type="Button" parent="StationSpawnSection"]
layout_mode = 2
text = "Select & Place Station"

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="NPCSpawnSection" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="NPCLabel" type="Label" parent="NPCSpawnSection"]
layout_mode = 2
text = "Spawn NPC"

[node name="SpawnNPCButton" type="Button" parent="NPCSpawnSection"]
layout_mode = 2
text = "Place NPC"

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2

[node name="CancelButton" type="Button" parent="."]
layout_mode = 2
text = "Cancel Placement"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2
